--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
   },
   "browserslist": {
     "production": [
